--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,21 +1,31 @@
 .home {
 
   .content-section {
-    margin: 30px 0;
+    margin: 3%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 
-   
-    
     .text-content {
       width: 48%;
       padding-right: 1%;
+      
+      @media(max-width: 500px){
+        flex-direction: column-reverse;
+        width: 100%;
+        margin-left: 5%;
+      }
     }
 
     .img-content {
       width: 48%;
       padding-left: 1%;
+      
+      @media(max-width: 500px){
+        flex-direction: column-reverse;
+        width: 100%;
+        margin-left: 5%;
+      }
 
       img {
         border-radius: 10px;
@@ -36,6 +46,10 @@
       padding-right: 1%;
       padding-left: 0;
     }
+
+    @media(max-width: 500px) {
+      flex-direction: column-reverse;
+    }
   }
 
   .content-destination {
@@ -53,9 +67,48 @@
     display: flex;
     justify-content: space-between;
 
+    @media(max-width: 500px) {
+      flex-direction: column;
+      justify-content: center;
+      margin: 5% 10% 0;
+    }
+
     .destination {
       width: 30%;
       margin-bottom: 30px;
+
+      @media(max-width: 500px) {
+        width: 100%;
+      }
+    }
+  }
+
+  .btn{
+    color: white;
+    font-size: 1.5rem;
+    text-align: center;
+    width:80%;
+    height: 15%;
+    padding: 5%;
+    background-color: @eastern-blue;
+    border-radius: 40%;
+
+    @media(max-width: 500px) {
+      font-size: 1.5rem;
+      text-align: center;
+      width: 85%;
+      height: 1%;
+      border-radius: 10%;
     }
   }
 }// home
+
+.welcome-section{
+  margin-top: 2%;
+  border-bottom: 1px dashed lightgrey;
+  padding-bottom: 1%;
+
+  @media(max-width: 500px) {
+    margin: 7%;
+  }
+}
