--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,40 @@
 // Navigation Styles here
+
+nav{
+    width: 100%;
+    display: flex;
+    border-bottom: 1px dashed lightgrey;
+    padding-bottom: 1%;
+    
+    a{
+        font-size: 1.5rem;
+        color: black;
+        padding: 2%;
+        text-decoration: none;
+    }
+
+    h2{
+        padding: 2% 45% 0 0;
+    }
+}
+
+@media(max-width: 500px) {
+    nav{
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+
+    nav a{
+        text-align: center;
+    }
+
+    nav h2{
+        display: flex;
+        width: 100%;
+        justify-content: flex-end;
+        margin-left: 25%;
+        padding-bottom:1%;
+    }
+}
